--- a/index.html
+++ b/index.html
@@ -50,6 +50,41 @@
             <img id="arrow" class="mt-2" src="images/arrow.svg" alt="arrow icon">
         </div>
       </section>
+      <section id="about" class="about container">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse libero officia velit labore minima ex unde repellendus voluptatem excepturi eveniet, commodi sit alias dolor dolorem soluta debitis? Voluptatum temporibus facilis quae ipsa modi ex voluptatem possimus asperiores, labore soluta esse autem similique debitis, velit, necessitatibus sed praesentium rerum voluptates aliquid.</p>
+        <div class="about-exp">
+            <div class="about-exp-item">
+               <div class="about-exp-item-header">
+                   <div>
+                        <h5>Software Enginner</h5>
+                        <p>Coding Studio (2021-Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+               </div>
+               <p class="about-exp-item-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima praesentium voluptatibus perferendis deserunt natus officiis excepturi itaque repellendus dolor, voluptas ut repudiandae voluptatum. Odio itaque fugiat impedit beatae inventore alias?</p>
+            </div>
+            <div class="about-exp-item">
+               <div class="about-exp-item-header">
+                   <div>
+                        <h5>Software Enginner</h5>
+                        <p>Coding Studio (2021-Now)</p>
+                    </div>
+                    <button class="btn button"onclick="toggleDetail(event)">More Info</button>
+               </div>
+               <p class="about-exp-item-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima praesentium voluptatibus perferendis deserunt natus officiis excepturi itaque repellendus dolor, voluptas ut repudiandae voluptatum. Odio itaque fugiat impedit beatae inventore alias?</p>
+            </div>
+            <div class="about-exp-item">
+               <div class="about-exp-item-header">
+                   <div>
+                        <h5>Software Enginner</h5>
+                        <p>Coding Studio (2021-Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+               </div>
+               <p class="about-exp-item-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima praesentium voluptatibus perferendis deserunt natus officiis excepturi itaque repellendus dolor, voluptas ut repudiandae voluptatum. Odio itaque fugiat impedit beatae inventore alias?</p>
+            </div>
+        </div>
+      </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
