--- a/index.html
+++ b/index.html
@@ -103,6 +103,46 @@
             </div>
            </div>
       </section>
+      <section id="contact" class="contact container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id sunt hic ipsa ratione aliquam cumque tempora omnis sequi distinctio iste accusantium laborum, nihil est accusamus itaque natus vero asperiores, rem odit consequatur quaerat debitis deserunt. Facere deserunt quae consequatur quo dolorem, in adipisci similique delectus dolores officiis autem? Nam, in?</p>
+                <div class="row">
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Facebook.svg" alt="facebook icon">
+                        <p>John Doe</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Instagram.svg" alt="Instagram icon">
+                        <p>@john_doe</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Twitter.svg" alt="Twitter icon">
+                        <p>@john_doe</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <form class="contact-form" onsubmit="onformSubmit(event)">
+                    <div class="mb-3">
+                      <label for="inp_email" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="inp_email" placeholder="example@email.com" required>
+                    </div>
+                    <div class="mb-3">
+                      <label for="inp_subject" class="form-label">Subject</label>
+                      <input type="text" class="form-control" id="inp_subject" placeholder="Your Subject" required>
+                    </div>
+                    <div class="mb-3">
+                      <label for="inp_message" class="form-label">Message</label>
+                      <input type="text" class="form-control" id="inp_message" placeholder="Your Message" required>
+                    </div>
+                    <div class="d-flex justify-content-center mt-5">
+                        <button type="submit" class="btn button">Submit</button>
+                    </div>
+                  </form>
+            </div>
+        </div>
+      </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
