--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
       </section>
       <section id="work" class="work container">
            <div class="row d-flex align-items-center gap-5">
-            <div class="col">
+            <div class="col-12 col-md-5">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa ipsum tenetur perferendis aut repellat maxime odit soluta labore illum? Cum suscipit obcaecati ducimus quasi a sunt ab eveniet, vitae quis odit nesciunt ipsa et sed molestias exercitationem, odio at assumenda quaerat aspernatur ex unde! Quod vel cupiditate quam incidunt veniam.</p>
             </div>
-            <div class="col-12 col-6 work-img">
+            <div class="col-12 col-md-5 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="images/work-1.png" alt="work-1">
                 </div>
